; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Cfg.c_CfgSaveExW3.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Cfg.c_CfgSaveExW3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i32, i32 }
%struct.TYPE_9__ = type { i32 }

@MAX_SIZE = common dso_local global i32 0, align 4
@SHA1_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i32] [i32 37, i32 115, i32 46, i32 108, i32 111, i32 103, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CfgSaveExW3(%struct.TYPE_7__* %0, i32* %1, i32* %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_7__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  %15 = alloca i64, align 8
  %16 = alloca %struct.TYPE_8__*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  %21 = load i32, i32* @MAX_SIZE, align 4
  %22 = zext i32 %21 to i64
  %23 = call i8* @llvm.stacksave()
  store i8* %23, i8** %12, align 8
  %24 = alloca i32, i64 %22, align 16
  store i64 %22, i64* %13, align 8
  %25 = load i32, i32* %11, align 4
  %26 = icmp ne i32 %25, 0
  %27 = xor i1 %26, true
  %28 = zext i1 %27 to i32
  store i32 %28, i32* %14, align 4
  %29 = load i32, i32* @SHA1_SIZE, align 4
  %30 = zext i32 %29 to i64
  %31 = alloca i32, i64 %30, align 16
  store i64 %30, i64* %15, align 8
  store i32 1, i32* %18, align 4
  store i32 0, i32* %19, align 4
  %32 = load i32*, i32** %9, align 8
  %33 = icmp eq i32* %32, null
  br i1 %33, label %37, label %34

34:                                               ; preds = %5
  %35 = load i32*, i32** %8, align 8
  %36 = icmp eq i32* %35, null
  br i1 %36, label %37, label %38

37:                                               ; preds = %34, %5
  store i32 0, i32* %6, align 4
  store i32 1, i32* %20, align 4
  br label %144

38:                                               ; preds = %34
  %39 = load i32*, i32** %10, align 8
  %40 = icmp eq i32* %39, null
  br i1 %40, label %41, label %42

41:                                               ; preds = %38
  store i32* %19, i32** %10, align 8
  br label %42

42:                                               ; preds = %41, %38
  %43 = load i32*, i32** %8, align 8
  %44 = load i32, i32* %14, align 4
  %45 = call %struct.TYPE_8__* @CfgFolderToBuf(i32* %43, i32 %44)
  store %struct.TYPE_8__* %45, %struct.TYPE_8__** %16, align 8
  %46 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %47 = icmp eq %struct.TYPE_8__* %46, null
  br i1 %47, label %48, label %49

48:                                               ; preds = %42
  store i32 0, i32* %6, align 4
  store i32 1, i32* %20, align 4
  br label %144

49:                                               ; preds = %42
  %50 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %51 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %50, i32 0, i32 1
  %52 = load i32, i32* %51, align 4
  %53 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %54 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 4
  %56 = call i32 @Sha0(i32* %31, i32 %52, i32 %55)
  %57 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %58 = icmp ne %struct.TYPE_7__* %57, null
  br i1 %58, label %59, label %74

59:                                               ; preds = %49
  %60 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %61 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 4
  %63 = load i32, i32* @SHA1_SIZE, align 4
  %64 = call i64 @Cmp(i32* %31, i32 %62, i32 %63)
  %65 = icmp eq i64 %64, 0
  br i1 %65, label %66, label %67

66:                                               ; preds = %59
  store i32 0, i32* %18, align 4
  br label %73

67:                                               ; preds = %59
  %68 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %69 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %68, i32 0, i32 0
  %70 = load i32, i32* %69, align 4
  %71 = load i32, i32* @SHA1_SIZE, align 4
  %72 = call i32 @Copy(i32 %70, i32* %31, i32 %71)
  br label %73

73:                                               ; preds = %67, %66
  br label %74

74:                                               ; preds = %73, %49
  %75 = load i32, i32* %18, align 4
  %76 = icmp ne i32 %75, 0
  br i1 %76, label %83, label %77

77:                                               ; preds = %74
  %78 = call %struct.TYPE_9__* (...) @GetOsInfo()
  %79 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %78, i32 0, i32 0
  %80 = load i32, i32* %79, align 4
  %81 = call i64 @OS_IS_UNIX(i32 %80)
  %82 = icmp ne i64 %81, 0
  br i1 %82, label %83, label %136

83:                                               ; preds = %77, %74
  %84 = mul nuw i64 4, %22
  %85 = trunc i64 %84 to i32
  %86 = load i32*, i32** %9, align 8
  %87 = call i32 @UniFormat(i32* %24, i32 %85, i8* bitcast ([7 x i32]* @.str to i8*), i32* %86)
  %88 = load i32*, i32** %9, align 8
  %89 = call i32 @FileCopyExWithEofW(i32* %88, i32* %24, i32 1)
  %90 = load i32*, i32** %9, align 8
  %91 = call i32* @FileCreateW(i32* %90)
  store i32* %91, i32** %17, align 8
  %92 = load i32*, i32** %17, align 8
  %93 = icmp ne i32* %92, null
  br i1 %93, label %94, label %124

94:                                               ; preds = %83
  %95 = load i32*, i32** %17, align 8
  %96 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %97 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %96, i32 0, i32 1
  %98 = load i32, i32* %97, align 4
  %99 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %100 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %99, i32 0, i32 0
  %101 = load i32, i32* %100, align 4
  %102 = call i32 @FileWrite(i32* %95, i32 %98, i32 %101)
  %103 = icmp eq i32 %102, 0
  br i1 %103, label %104, label %119

104:                                              ; preds = %94
  %105 = load i32*, i32** %17, align 8
  %106 = call i32 @FileClose(i32* %105)
  %107 = load i32*, i32** %9, align 8
  %108 = call i32 @FileDeleteW(i32* %107)
  %109 = load i32*, i32** %9, align 8
  %110 = call i32 @FileRenameW(i32* %24, i32* %109)
  %111 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %112 = icmp ne %struct.TYPE_7__* %111, null
  br i1 %112, label %113, label %118

113:                                              ; preds = %104
  %114 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %115 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %114, i32 0, i32 0
  %116 = load i32, i32* %115, align 4
  %117 = call i32 @Zero(i32 %116, i32 4)
  br label %118

118:                                              ; preds = %113, %104
  br label %123

119:                                              ; preds = %94
  %120 = load i32*, i32** %17, align 8
  %121 = call i32 @FileClose(i32* %120)
  %122 = call i32 @FileDeleteW(i32* %24)
  br label %123

123:                                              ; preds = %119, %118
  br label %135

124:                                              ; preds = %83
  %125 = load i32*, i32** %9, align 8
  %126 = call i32 @FileRenameW(i32* %24, i32* %125)
  %127 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %128 = icmp ne %struct.TYPE_7__* %127, null
  br i1 %128, label %129, label %134

129:                                              ; preds = %124
  %130 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %131 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %130, i32 0, i32 0
  %132 = load i32, i32* %131, align 4
  %133 = call i32 @Zero(i32 %132, i32 4)
  br label %134

134:                                              ; preds = %129, %124
  br label %135

135:                                              ; preds = %134, %123
  br label %136

136:                                              ; preds = %135, %77
  %137 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %138 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %137, i32 0, i32 0
  %139 = load i32, i32* %138, align 4
  %140 = load i32*, i32** %10, align 8
  store i32 %139, i32* %140, align 4
  %141 = load %struct.TYPE_8__*, %struct.TYPE_8__** %16, align 8
  %142 = call i32 @FreeBuf(%struct.TYPE_8__* %141)
  %143 = load i32, i32* %18, align 4
  store i32 %143, i32* %6, align 4
  store i32 1, i32* %20, align 4
  br label %144

144:                                              ; preds = %136, %48, %37
  %145 = load i8*, i8** %12, align 8
  call void @llvm.stackrestore(i8* %145)
  %146 = load i32, i32* %6, align 4
  ret i32 %146
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local %struct.TYPE_8__* @CfgFolderToBuf(i32*, i32) #2

declare dso_local i32 @Sha0(i32*, i32, i32) #2

declare dso_local i64 @Cmp(i32*, i32, i32) #2

declare dso_local i32 @Copy(i32, i32*, i32) #2

declare dso_local i64 @OS_IS_UNIX(i32) #2

declare dso_local %struct.TYPE_9__* @GetOsInfo(...) #2

declare dso_local i32 @UniFormat(i32*, i32, i8*, i32*) #2

declare dso_local i32 @FileCopyExWithEofW(i32*, i32*, i32) #2

declare dso_local i32* @FileCreateW(i32*) #2

declare dso_local i32 @FileWrite(i32*, i32, i32) #2

declare dso_local i32 @FileClose(i32*) #2

declare dso_local i32 @FileDeleteW(i32*) #2

declare dso_local i32 @FileRenameW(i32*, i32*) #2

declare dso_local i32 @Zero(i32, i32) #2

declare dso_local i32 @FreeBuf(%struct.TYPE_8__*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
